--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1</td>
+                            <td>Ex</td>
                             <td>Nandi Patel</td>
                             <td>npatel127@hawk.iit.edu</td>
                             <td>Human Resources</td>
@@ -66,6 +66,7 @@
                                 </a>
                             </td>
                         </tr>
+                        <%- include('_show') %>
                     </tbody>
                 </table>
             </form>
@@ -73,6 +74,11 @@
         </div>
     </main>
     <!-- main section end-->
+    <!-- adding script connections -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
