--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -45,31 +45,33 @@
                     <div class="new_user">
                         <div class="form-group">
                             <label for="name" class="text-dark">Name</label>
-                            <input type="hidden" name="id" value="">
-                            <input type="text" name="name" value="" placeholder="Enter Full Name">
+                            <input type="hidden" name="id" value="<%= user._id %>">
+                            <input type="text" name="name" value="<%= user.name %>" placeholder="Enter Full Name">
                         </div>
                         <div class="form-group">
                             <label for="Email" class="text-dark">Email</label>
-                            <input type="text" name="email" value="" placeholder="example@gmail.com">
+                            <input type="text" name="email" value="<%= user.email %>" placeholder="example@gmail.com">
                         </div>
                         <div class="form-group">
                             <label for="department" class="text-dark">Department</label>
-                            <input type="text" name="department" value=""
+                            <input type="text" name="department" value="<%= user.department %>"
                                 placeholder="Enter what department you work in">
                         </div>
                         <div class="form-group">
                             <label for="position" class="text-dark">Position</label>
-                            <input type="text" name="position" value=""
+                            <input type="text" name="position" value="<%= user.position %>"
                                 placeholder="Enter your position in the company">
                         </div>
                         <div class="form-group">
                             <label for="status" class="text-dark">Status</label>
                             <div class="radio inline">
-                                <input type="radio" id="radio-2" name="status" value="Full-Time">
+                                <input type="radio" id="radio-2" name="status" value="Full-Time"
+                                    <%=user.status=='Full-Time' ? 'checked' : '' %>>
                                 <label for="radio-2" class="radio-label">Full-Time</label>
                             </div>
                             <div class="radio inline">
-                                <input type="radio" id="radio-3" name="status" value="Part-Time">
+                                <input type="radio" id="radio-3" name="status" value="Part-Time"
+                                    <%=user.status=='Part-Time' ? 'checked' : '' %>>
                                 <label for="radio-3" class="radio-label">Part-Time</label>
                             </div>
                         </div>
