--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -41,7 +41,7 @@
                     <span class="text-dark"> Use the form to add a new employee to the system</span>
                 </div>
                 <!-- form -->
-                <form method="POST" id="add_user">
+                <form action="/api/users" method="POST" id="add_user">
                     <div class="new_user">
                         <div class="form-group">
                             <label for="name" class="text-dark">Name</label>
