cleaning up code

--- a/views/_show.ejs
+++ b/views/_show.ejs
@@ -22,7 +22,7 @@
             <a href="/update_user?id=<%= users[i]._id%>" class="btn border-shadow update">
                 <span class="text-button1"><i class="fa-solid fa-user-pen"></i></span>
             </a>
-            <a class="btn border-shadow delete">
+            <a class="btn border-shadow delete" data-id=<%=users[i]._id%> >
                 <span class="text-button2"><i class="fa-solid fa-user-slash"></i></span>
             </a>
         </td>
